--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,6 +1,7 @@
 {
   "version": "0.2.0",
   "configurations": [
+    
     {
       "name": "C/C++ Runner: Debug Session",
       "type": "cppdbg",
@@ -8,8 +9,8 @@
       "args": [],
       "stopAtEntry": false,
       "externalConsole": true,
-      "cwd": "c:/Users/pedro/estrutura de dados 1/lista1702",
-      "program": "c:/Users/pedro/estrutura de dados 1/lista1702/build/Debug/outDebug",
+      "cwd": "c:/Users/pedro/OneDrive/Área de Trabalho/3° periodo/estrutura de dados 1/estrutura-de-dados-1/aula0103",
+      "program": "c:/Users/pedro/OneDrive/Área de Trabalho/3° periodo/estrutura de dados 1/estrutura-de-dados-1/aula0103/build/Debug/outDebug",
       "MIMode": "gdb",
       "miDebuggerPath": "gdb",
       "setupCommands": [
